--- a/css/style.scss
+++ b/css/style.scss
@@ -53,6 +53,7 @@ body {
 
     .sidebar {
         @include padded;
+        width: 40%;
     }
 
     @media #{$desktop} {
